added wsagger documentation to usercontroller and role controller
